tests/NormalTests/paczka1/fuzzy1/91667675.err
Error in line 13: CGCBxauc S561 46,8
Error in line 15: N3k S561 35,6
Error in line 20: 2eK2dLELvP S561 -1,8
Error in line 19: 2eK2dLELvP S561 5,3
Error in line 33: 2eK2dLELvP S890 4,2
Error in line 38: YIHO S129 56,7
